<resources>
    <string name="app_name">GADS 2020</string>
    <string name="gads_logo">GADS Logo</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GitHub Link</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="log">log</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="yes">YES</string>
    <string name="close">close</string>

    <string name="skill_iq_badge">skill iq badge</string>

    <string name="hours_badge">hours badge</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_unsuccessful">Submission Not Successful</string>
    <string name="no_network_response">No Network Response</string>
</resources>